crates/cli/tests/snapshots/run_test__node_npm__installs_correct_version.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 281
expression: get_assert_output(&assert)
---
▪▪▪▪ npm:version
7.0.0

Tasks: 1 completed
 Time: 100ms


